--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,8 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
+### .idea ###
+.idea/
 
 ### Eclipse ###
 .apt_generated
